Fix missing margins on docs TOC

--- a/assets/assets/css/docs.scss
+++ b/assets/assets/css/docs.scss
@@ -145,9 +145,6 @@ article {
 		}
 	}
 
-	> ul > li > ul {
-		padding-left: 0
-	}
 
 }
 
